--- a/src/main/resources/static/layuimini/SimuPage/federateAdvance.html
+++ b/src/main/resources/static/layuimini/SimuPage/federateAdvance.html
@@ -9,11 +9,11 @@
 <body>
 <div style="margin-left: 20px ; margin-top: 20px ;width: 1200px">
     <fieldset class="layui-elem-field">
-        <legend style="font-size: 40px">仿真联邦进阶参数设置</legend>
+        <legend style="font-size: 40px">离散事件仿真参数设置（二）</legend>
 
         <div >
             <fieldset class="layui-elem-field layui-field-title">
-                <legend>仿真列表信息设置</legend>
+                <legend>联邦成员队列信息设计</legend>
                 <div class="layui-field-box">
 
                     <table id="federateList" lay-filter="FederateListTableFilter">
@@ -23,10 +23,10 @@
                     <script type="text/html" id="FederateListToolBar">
                         <div class="layui-btn-container">
                             <button class="layui-btn layui-btn-sm layui-btn-normal" lay-event="getFederateListData">
-                                更新所有仿真列表信息
+                                更新联邦成员队列信息
                             </button>
                             <button class="layui-btn layui-btn-sm layui-btn-warm" lay-event="addFederateListData">
-                                添加一个仿真列表信息
+                                添加联邦成员队列
                             </button>
                         </div>
                     </script>
@@ -59,6 +59,7 @@
 
                     <!--表头工具栏，每一行都有的按钮-->
                     <script type="text/html" id="InitialInstanceBar">
+                        <a class="layui-btn layui-btn-normal layui-btn-sm" lay-event="setProperty">实例初值设置</a>
                         <a class="layui-btn layui-btn-normal layui-btn-sm" lay-event="delete">删除</a>
                     </script>
                 </div>
@@ -99,9 +100,9 @@
                 url:"/federateInfo/getAllFederateListInfo",//后台数据接口
                 page: false ,//开启分页
                 cols:[[
-                    {field: "listId", title: '列表编号', fixed: 'left'}
-                    ,{field: "objectType", title: '列表元素类型'}
-                    ,{field:"listName",title:'列表名称'}
+                    {field: "listId", title: '队列编号', fixed: 'left'}
+                    ,{field: "objectType", title: '队列元素类型'}
+                    ,{field:"listName",title:'队列名称'}
                     ,{field:"federate",title:'所属联邦成员'}
                     ,{field:'操作',title:'操作',toolbar:"#FederateListBar"}
                 ]],
@@ -117,9 +118,9 @@
                             url:"/federateInfo/getAllFederateListInfo",//后台数据接口
                             page: false ,//开启分页
                             cols:[[
-                                {field: "listId", title: '列表编号', fixed: 'left'}
-                                ,{field: "objectType", title: '列表元素类型'}
-                                ,{field:"listName",title:'列表名称'}
+                                {field: "listId", title: '队列编号', fixed: 'left'}
+                                ,{field: "objectType", title: '队列元素类型'}
+                                ,{field:"listName",title:'队列名称'}
                                 ,{field:"federate",title:'所属联邦成员'}
                                 ,{field:'操作',title:'操作',toolbar:"#FederateListBar"}
                             ]],
@@ -131,7 +132,7 @@
                             type:2,
                             title:"添加联邦参数",
                             area:['500px','450px'],
-                            content:["layerPage/federateList.html",'yes']
+                            content:["layerPage/federateAdvancePages/federateList.html",'yes']
                         });
                         break;
                 }
@@ -169,21 +170,16 @@
                 }
             });
 
-            //startInformation的表
+            //InitialInstance表
             table.render({
                 elem:"#InitialInstance",//elem绑定id属性值
-                url:"/federateInfo/getAllInitialInstanceInfo",//后台数据接口
+                url:"/federateInfo/getAllFederateInitialInstance",//后台数据接口
                 page: false ,//开启分页
                 cols:[[
-                    {field: "federateName", title: '实例所属联邦成员', fixed: 'left'}
-                    ,{field: "fedearteType", title: '联邦成员类型', fixed: 'left'}
-                    ,{field:"firstTaskId",title:'初始任务ID'}
-                    ,{field:"variableIds",title:'变量ID'}
-                    ,{field:"objectIds",title:'对象ID'}
-                    ,{field:"hasOwnEvent",title:'是否有自发任务'}
-                    ,{field:"ownEventTask",title:'自发任务ID'}
-                    ,{field:"initialInstanceTaskId",title:'初始化实例任务ID'}
-                    ,{field:"updateInstanceTaskId",title:'更新实例任务ID'}
+                    {field: "instanceType", title: '实例类型', fixed: 'left'}
+                    ,{field: "instanceNum", title: '实例数目'}
+                    ,{field:"listName",title:'实例所属列表'}
+                    ,{field:'操作',title:'操作',toolbar:"#InitialInstanceBar"}
                 ]],
                 toolbar:"#InitialInstanceToolBar"
             });
@@ -196,18 +192,14 @@
                         //startInformation的表
                         table.render({
                             elem:"#InitialInstance",//elem绑定id属性值
-                            url:"/federateInfo/getAllInitialInstanceInfo",//后台数据接口
+                            url:"/federateInfo/getAllFederateInitialInstance",//后台数据接口
                             page: false ,//开启分页
                             cols:[[
-                                {field: "federateName", title: '实例所属联邦成员', fixed: 'left'}
-                                ,{field: "fedearteType", title: '联邦成员类型', fixed: 'left'}
-                                ,{field:"firstTaskId",title:'初始任务ID'}
-                                ,{field:"variableIds",title:'变量ID'}
-                                ,{field:"objectIds",title:'对象ID'}
-                                ,{field:"hasOwnEvent",title:'是否有自发任务'}
-                                ,{field:"ownEventTask",title:'自发任务ID'}
-                                ,{field:"initialInstanceTaskId",title:'初始化实例任务ID'}
-                                ,{field:"updateInstanceTaskId",title:'更新实例任务ID'}
+                                {field: "instanceType", title: '实例类型', fixed: 'left'}
+                                ,{field: "instanceNum", title: '实例数目'}
+                                ,{field:"listName",title:'实例所属列表'}
+                                ,{field:"id",style:'display:none;'}
+                                ,{field:'操作',title:'操作',toolbar:"#InitialInstanceBar"}
                             ]],
                             toolbar:"#InitialInstanceToolBar"
                         });
@@ -215,40 +207,47 @@
                     case "addInitialInstanceData":
                         layer.open({
                             type:2,
-                            title:"",
+                            title:"添加联邦成员实例初始化信息",
                             area:['500px','400px'],
-                            content:["layerPage/federateInstance.html",'yes']
-                        });
-                        break;
-                    case "addUpdateInstanceData":
-                        layer.open({
-                            type:2,
-                            title:"",
-                            area:['500px','400px'],
-                            content:["layerPage/updateInstance.html",'yes']
+                            content:["layerPage/federateAdvancePages/federateInstance.html",'yes']
                         });
                         break;
                 }
             });
 
+            table.on('tool(InitialInstanceTableFilter)',function (obj) {
+                let eventName = obj.event;
+                //判断事件名，执行对应的代码
+                switch(eventName){
+                    case "setProperty":
+                        // console.log(obj);
+                        // console.log(obj.data["instanceType"]);
+                        //ajax告诉后台当前objectType
+                        let Info={
+                            "id":obj.data["id"]
+                        };
+                        //ajax设置instanceId
+                        $.ajax({
+                            url:"/federateInfo/setInitialInstancetaskById",
+                            type:"post",
+                            dataType: 'json',
+                            data:JSON.stringify(Info),
+                            contentType: "application/json;charset=utf-8",//发送给后台数据的格式
+                            success:function(result){
+                            }
+                        });
 
-            //updateInstance的表
-            table.render({
-                elem:"#InitialInstance",//elem绑定id属性值
-                url:"/federateInfo/getAllUpdateInstanceInfo",//后台数据接口
-                page: false ,//开启分页
-                cols:[[
-                    {field: "federateName", title: '实例所属联邦成员', fixed: 'left'}
-                    ,{field: "fedearteType", title: '联邦成员类型', fixed: 'left'}
-                    ,{field:"firstTaskId",title:'初始任务ID'}
-                    ,{field:"variableIds",title:'变量ID'}
-                    ,{field:"objectIds",title:'对象ID'}
-                    ,{field:"hasOwnEvent",title:'是否有自发任务'}
-                    ,{field:"ownEventTask",title:'自发任务ID'}
-                    ,{field:"initialInstanceTaskId",title:'初始化实例任务ID'}
-                    ,{field:"updateInstanceTaskId",title:'更新实例任务ID'}
-                ]],
-                toolbar:"#InitialInstanceToolBar"
+                        layer.open({
+                            type:2,
+                            title:"添加联邦成员实例初始化信息",
+                            area:['500px','400px'],
+                            content:["layerPage/federateAdvancePages/federateInstanceProperty.html",'yes']
+                        });
+                        break;
+                    case "delete":
+
+                        break;
+                }
             });
 
         });
