--- a/src/main/resources/static/layuimini/SimuPage/layerPage/federateInitialize.html
+++ b/src/main/resources/static/layuimini/SimuPage/layerPage/federateInitialize.html
@@ -47,7 +47,7 @@
         let $ = layui.jquery;
 
         form.on('submit(formDemo)', function(data){
-            Info={
+            let Info={
                 "isFirst":data.field.isFirst,
                 "firstTask":data.field.firstTask
             };
