--- a/src/main/resources/static/layuimini/SimuPage/InsideTask.html
+++ b/src/main/resources/static/layuimini/SimuPage/InsideTask.html
@@ -23,15 +23,21 @@
 
                             <!--表头工具栏，每一行都有的按钮-->
                             <script type="text/html" id="insideTaskBar">
-                                <a class="layui-btn layui-btn-normal layui-btn-sm" lay-event="choose">选中编辑</a>
-                                <a class="layui-btn layui-btn-normal layui-btn-sm" lay-event="delete">删除任务</a>
+                                <a class="layui-btn layui-btn-warm layui-btn-sm" lay-event="choose">选中编辑</a>
+                                <a class="layui-btn layui-btn-danger layui-btn-sm" lay-event="delete">删除任务</a>
                             </script>
 
                             <!--表格工具栏-->
                             <script type="text/html" id="insideTaskToolBar">
                                 <div class="layui-btn-container">
-                                    <button class="layui-btn layui-btn-sm layui-btn-danger" lay-event="getInsideTaskData">
+                                    <button class="layui-btn layui-btn-sm layui-btn" lay-event="getInsideTaskData">
                                         更新内部任务
+                                    </button>
+                                    <button class="layui-btn layui-btn-sm layui-btn-normal" lay-event="addInsideTask">
+                                        添加内部任务
+                                    </button>
+                                    <button class="layui-btn layui-btn-sm layui-btn-primary" lay-event="addSelect">
+                                        添加Select信息
                                     </button>
                                 </div>
                             </script>
@@ -81,6 +87,26 @@
                                 ,{field:'操作',title:'操作',toolbar:"#insideTaskBar"}
                             ]],
                             toolbar:"#insideTaskToolBar"
+                        });
+                        break;
+
+                    case "addInsideTask":
+                        //打开查看进度的bpmn
+                        layer.open({
+                            type:2,
+                            title:"联邦成员实例范围设置",
+                            area:['500px','300px'],
+                            content:["layerPage/addInsideTask.html",'yes']
+                        });
+                        break;
+
+                    case "addSelect":
+                        //打开查看进度的bpmn
+                        layer.open({
+                            type:2,
+                            title:"联邦成员实例范围设置",
+                            area:['500px','300px'],
+                            content:["layerPage/addSelectInfo.html",'yes']
                         });
                         break;
                 }
