--- a/src/main/resources/static/layuimini/SimuPage/layerPage/federateBasicPages/federateObject.html
+++ b/src/main/resources/static/layuimini/SimuPage/layerPage/federateBasicPages/federateObject.html
@@ -3,26 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>联邦对象表单</title>
-    <link type="text/css" rel="stylesheet" href="../../layui/css/layui.css">
-    <script type="text/javascript" src="../../layui/layui.js"></script>
+    <link type="text/css" rel="stylesheet" href="../../../layui/css/layui.css">
+    <script type="text/javascript" src="../../../layui/layui.js"></script>
 </head>
 <body>
     <div >
 
         <fieldset class="layui-elem-field layui-field-title" style="width: 480px;margin-left: 10px;margin-right: 10px;margin-top: 10px">
-            <legend>联邦对象表单</legend>
+            <legend>联邦成员对象</legend>
             <br />
             <form class="layui-form" id="formid" action="">
                 <div class="layui-form-item">
                     <label class="layui-form-label" style="width: 100px">对象名称：</label>
                     <div class="layui-input-inline">
                         <input type="text" name="objectName" required  lay-verify="required" placeholder="联邦对象名称" autocomplete="off" class="layui-input">
-                    </div>
-                </div>
-                <div class="layui-form-item">
-                    <label class="layui-form-label" style="width: 100px">初始化ID：</label>
-                    <div class="layui-input-inline">
-                        <input type="text" name="InitialId" required  lay-verify="required" placeholder="非实例对象填写-1" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
