--- a/src/main/resources/static/layuimini/SimuPage/layerPage/federateBasicPages/federateVariable.html
+++ b/src/main/resources/static/layuimini/SimuPage/layerPage/federateBasicPages/federateVariable.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>联邦全局变量表单</title>
-    <link type="text/css" rel="stylesheet" href="../../layui/css/layui.css">
-    <script type="text/javascript" src="../../layui/layui.js"></script>
+    <link type="text/css" rel="stylesheet" href="../../../layui/css/layui.css">
+    <script type="text/javascript" src="../../../layui/layui.js"></script>
 </head>
 <body>
     <div >
 
         <fieldset class="layui-elem-field layui-field-title" style="width: 480px;margin-left: 10px;margin-right: 10px;margin-top: 10px">
-            <legend>联邦全局变量表单</legend>
+            <legend>联邦成员变量</legend>
             <br />
             <form class="layui-form" id="formid" action="">
                 <div class="layui-form-item">
